<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/intent_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/intent_detail_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/intent_content_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intent_detail_data_description"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/intent_detail_data_clear"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:drawable/ic_menu_close_clear_cancel" />

                <EditText
                    android:id="@+id/intent_detail_data_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/intent_detail_data_clear"
                    android:layout_toLeftOf="@id/intent_detail_data_clear"
                    android:inputType="text"
                    android:autofillHints="@string/intent_detail_data_input_hint"
                    android:hint="@string/intent_detail_data_input_hint" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/intent_detail_data_input_button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                    android:text="@string/intent_detail_data_sample1_description"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/intent_detail_data_input_button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                    android:text="@string/intent_detail_data_sample2_description"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/intent_detail_data_input_button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                    android:text="@string/intent_detail_data_sample3_description"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/intent_detail_data_input_button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                    android:text="@string/intent_detail_data_sample4_description"
                    android:textAllCaps="false" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/intent_content_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/intent_detail_app_description"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/intent_detail_app_clear"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:drawable/ic_menu_close_clear_cancel"/>

                <EditText
                    android:id="@+id/intent_detail_app_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/intent_detail_app_clear"
                    android:layout_toLeftOf="@id/intent_detail_app_clear"
                    android:inputType="text"
                    android:autofillHints="@string/intent_detail_app_input_hint"
                    android:hint="@string/intent_detail_app_input_hint" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/intent_detail_app_sample1_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                    android:text="@string/intent_detail_app_sample1_description" />

                <Button
                    android:id="@+id/intent_detail_app_sample2_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                    android:text="@string/intent_detail_app_sample2_description" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/intent_content_zoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/intent_detail_zoom_description"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/intent_detail_zoom_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" />

        </LinearLayout>

        <Button
            android:id="@+id/intent_detail_start_intent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/intent_detail_start_intent" />

    </LinearLayout>

</ScrollView>
